- fix code flex wrap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 1000 version
+*/
+
 @import url("roboto.css");
 
 * {
@@ -102,13 +109,34 @@ a {
 }
 
 .games .row {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    /* display: -ms-grid; */
+    /* display: grid; */
+    /* -ms-grid-columns: 1fr 1fr 1fr; */
+    /* grid-template-columns: 1fr 1fr 1fr; */
+
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+}
+
+.columns-3 > * {
+    width: -webkit-calc(100% / 3);
+    width: -moz-calc(100% / 3);
+    width: calc(100% / 3);
 }
 
 .games .row .card {
+    width: 350px;
+    padding: 1em;
     margin: 1.5em;
     -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
        -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
@@ -136,6 +164,9 @@ a {
     display: -moz-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
     text-indent: 2em;
     text-transform: uppercase;
 }
@@ -144,9 +175,6 @@ a {
     color: rgb(203, 142, 27);
 }
 
-.games .row .card .bottom .repo {
-    margin-right: 2em;
-}
 
 /* Responsive */
 @media only screen and (min-width: 0) {
